[gd_scene load_steps=10 format=2]

[ext_resource path="res://scene/GameScene.gd" type="Script" id=1]
[ext_resource path="res://scene/object/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Battle/ItemUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/Battle/StateUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/object/TeamPropertyPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/object/RoleListUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/object/RolePanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/object/LevelUpPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/Battle/DescriptionPanel.tscn" type="PackedScene" id=9]

[node name="GameScene" type="Node2D"]
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1345.0
margin_bottom = 635.0

[node name="Map" parent="ScrollContainer" instance=ExtResource( 2 )]
margin_right = 2500.0
margin_bottom = 600.0
rect_min_size = Vector2( 2500, 600 )

[node name="ui" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="ItemUI" parent="ui" instance=ExtResource( 3 )]
margin_left = 36.7117
margin_top = 643.141
margin_right = 76.7117
margin_bottom = 683.141

[node name="StateUI" parent="ui" instance=ExtResource( 4 )]
margin_left = -17.196
margin_top = -29.7582
margin_right = 22.804
margin_bottom = 10.2418

[node name="TeamPropertyPanel" parent="ui" instance=ExtResource( 5 )]
margin_left = 502.411
margin_right = 673.411

[node name="RoleListUI" parent="ui" instance=ExtResource( 6 )]
margin_left = 694.0
margin_top = 14.0
margin_right = 734.0
margin_bottom = 54.0

[node name="RolePanel" parent="ui" instance=ExtResource( 7 )]
visible = false

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="eventPlace" type="Control" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PopupPanel" type="Control" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 7.0
margin_bottom = -5.0
mouse_filter = 2

[node name="LevelUpPanel" parent="CanvasLayer2/PopupPanel" instance=ExtResource( 8 )]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DescriptionPanel" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false
margin_left = 457.0
margin_top = 190.0
margin_right = 657.0
margin_bottom = 390.0

